Add contact tool (part 1)
