# server/openapi_server/models/text_contact_annotation_request.py
@@ -11,16 +11,16 @@ from openapi_server import util
 
 from openapi_server.models.note import Note  # noqa: E501
 
-class TextDateAnnotationRequest(Model):
+class TextContactAnnotationRequest(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 
     Do not edit the class manually.
     """
 
     def __init__(self, note=None):  # noqa: E501
-        """TextDateAnnotationRequest - a model defined in OpenAPI
+        """TextContactAnnotationRequest - a model defined in OpenAPI
 
-        :param note: The note of this TextDateAnnotationRequest.  # noqa: E501
+        :param note: The note of this TextContactAnnotationRequest.  # noqa: E501
         :type note: Note
         """
         self.openapi_types = {
@@ -34,32 +34,32 @@ class TextDateAnnotationRequest(Model):
         self._note = note
 
     @classmethod
-    def from_dict(cls, dikt) -> 'TextDateAnnotationRequest':
+    def from_dict(cls, dikt) -> 'TextContactAnnotationRequest':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The TextDateAnnotationRequest of this TextDateAnnotationRequest.  # noqa: E501
-        :rtype: TextDateAnnotationRequest
+        :return: The TextContactAnnotationRequest of this TextContactAnnotationRequest.  # noqa: E501
+        :rtype: TextContactAnnotationRequest
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def note(self):
-        """Gets the note of this TextDateAnnotationRequest.
+        """Gets the note of this TextContactAnnotationRequest.
 
 
-        :return: The note of this TextDateAnnotationRequest.
+        :return: The note of this TextContactAnnotationRequest.
         :rtype: Note
         """
         return self._note
 
     @note.setter
     def note(self, note):
-        """Sets the note of this TextDateAnnotationRequest.
+        """Sets the note of this TextContactAnnotationRequest.
 
 
-        :param note: The note of this TextDateAnnotationRequest.
+        :param note: The note of this TextContactAnnotationRequest.
         :type note: Note
         """
         if note is None:
